[package]
name = "snowland-x11-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.19.1", features = ["xlib", "glx", "xrandr", "xcomposite", "xfixes"] }
thiserror = "1.0.32"
bitflags = "1.3.2"
mio = { version = "0.8.4", features = ["os-ext", "os-poll"], optional = true }

[target.'cfg(windows)'.dependencies]

[build-dependencies]
cargo-emit = "0.2.1"

[features]
connection-poll = ["mio"]

[patch.crates-io]
x11 = { git = "https://github.com/Janrupf/x11-rs", rev = "37e152933b06d94c7c3115997571ff4258415f9a" }
