[package]
name = "wrap11"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.19.1", features = ["xlib", "glx", "xrandr", "xcomposite", "xfixes", "xtest"] }
libc = "0.2.140"
thiserror = "1.0.40"
bitflags = "2.0.2"
mio = { version = "0.8.6", features = ["os-ext", "os-poll"], optional = true }

[target.'cfg(windows)'.dependencies]

[build-dependencies]
cargo-emit = "0.2.1"

[features]
connection-poll = ["mio"]

[patch.crates-io]
x11 = { git = "https://github.com/Janrupf/x11-rs", rev = "1563167aaef4b5c397ae92b4585ba39c3f523b88" }
